fixed extra white space issue in plp

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -217,6 +217,13 @@
     margin-top: 2%;
     top: 130px;
     align-self: flex-start;
+    @media screen and (min-width:992px) {
+      height: calc(100vh - 130px);
+      overflow:scroll;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
 }
 
 
@@ -308,15 +315,19 @@
 }
 
 .filter-side-menu {
-  height: calc(100vh - 240px);
-  overflow:scroll;
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  // height: calc(100vh - 240px);
+  // overflow:scroll;
+  // &::-webkit-scrollbar {
+  //   display: none;
+  // }
   margin: 0px 30px 0px 30px;
 
   @media screen and (max-width: 992px){
     height: calc(100% - 60px);
+      overflow:scroll;
+      &::-webkit-scrollbar {
+        display: none;
+      }
   }
 
   li {
